--- a/myTributePage.html
+++ b/myTributePage.html
@@ -3,48 +3,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>My Tribute Page</title>
-    <style>
-        #main {
-            margin: 50px;
-            padding: 20px;
-            justify-self: center;
-            background-color: gold;
-        }
-        h1
-
-        #img-div {
-            position: relative;
-            text-align: center;
-            background-color: green;
-        }
-
-
-        #image {
-          width: 100%;
-          height: auto;
-          max-width: 625px;
-          margin: 0 auto 0 auto;
-          display: block;
-          border-radius: 50%;
-        }
-
-        #img-caption {
-            position: absolute;
-            background-color: hotpink;
-            text-align: justify;
-            width: 500px;
-        }
-      
-    </style>
 </head>
 <body>
     <main id="main">
         <h1 id="title">Linda <a id="tribute-link" href="" target="_blank">"ProKid"</a> Mkhize</h1>
-        <span><h2>number one Soweto boy</h2> His work influenced other artists</span>
+       <div style="text-transform: uppercase; position: absolute; top: 185px; left: 200px;">number one Soweto boy His work influenced Mzansi's Hip Hop Industry</div>
         <div id="img-div">
             <figure>
-                <img id="image" src="https://turntable.kagiso.io/images/WhatsApp_Image_2018-08-09_at_14.28.40.width-800.jpg" alt="picture of ProKid" width="500" height="500">
+                <div id="disc"><span>aff</span></div>
+                <!-- <img id="image" src="https://turntable.kagiso.io/images/WhatsApp_Image_2018-08-09_at_14.28.40.width-800.jpg" alt="picture of ProKid" width="500" height="500"> -->
             <figcaption id="img-caption"> 
                 <strong>Linda Mkhize</strong> better known by his stage name 
                 ProKid or PRO, was a South African rapper and producer. He was known for rapping in a 
