--- a/myTributePage.html
+++ b/myTributePage.html
@@ -12,8 +12,8 @@
        <div style="text-transform: uppercase; position: absolute; top: 185px; left: 200px;">number one Soweto boy His work influenced Mzansi's Hip Hop Industry</div>
         <div id="img-div">
             <figure>
-                <div id="disc"><span>aff</span></div>
-                <!-- <img id="image" src="https://turntable.kagiso.io/images/WhatsApp_Image_2018-08-09_at_14.28.40.width-800.jpg" alt="picture of ProKid" width="500" height="500"> -->
+                <div id="disc">                <img id="image" src="https://turntable.kagiso.io/images/WhatsApp_Image_2018-08-09_at_14.28.40.width-800.jpg" alt="picture of ProKid" width="500" height="500">
+                </div>
             <figcaption id="img-caption"> 
                 <strong>Linda Mkhize</strong> better known by his stage name 
                 ProKid or PRO, was a South African rapper and producer. He was known for rapping in a 
@@ -25,7 +25,7 @@
         <div id="tribute-info">
             <h3>Albums</h3>
             <ul>
-                <li>2005 - Heads and Tales</li>
+                <li title="favorite tracks: fafa">2005 - Heads and Tales</li>
                 <li>2006 - DNA</li>
                 <li>2007 - Dankie San</li>
                 <li>2009 - Snakes and Ladders</li>
