--- a/myTributePage.html
+++ b/myTributePage.html
@@ -3,16 +3,21 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
     <title>My Tribute Page</title>
 </head>
 <body>
     <main id="main">
-        <h1 id="title">Linda <a id="tribute-link" href="" target="_blank">"ProKid"</a> Mkhize</h1>
-       <div style="text-transform: uppercase; position: absolute; top: 185px; left: 200px;">number one Soweto boy His work influenced Mzansi's Hip Hop Industry</div>
+        <div id="title-div">
+            <h1 id="title">Linda <a id="tribute-link" href="" target="_blank">"ProKid"</a> Mkhize</h1>
+        </div>
+            <div id="subtitle-div">
+                <h3>number one Soweto boy His work influenced Mzansi's Hip Hop Industry</h3>
+            </div>
         <div id="img-div">
             <figure>
-                <div id="disc">                <img id="image" src="https://turntable.kagiso.io/images/WhatsApp_Image_2018-08-09_at_14.28.40.width-800.jpg" alt="picture of ProKid" width="500" height="500">
+                <div id="disc">
+                    <img id="image" src="https://turntable.kagiso.io/images/WhatsApp_Image_2018-08-09_at_14.28.40.width-800.jpg" alt="picture of ProKid" width="500" height="500">
                 </div>
             <figcaption id="img-caption"> 
                 <strong>Linda Mkhize</strong> better known by his stage name 
