font, background-img

--- a/myTributePage.html
+++ b/myTributePage.html
@@ -12,7 +12,7 @@
             <h1 id="title">Linda <a id="tribute-link" href="" target="_blank">"ProKid"</a> Mkhize</h1>
         </div>
             <div id="subtitle-div">
-                <h3>number one Soweto boy His work influenced Mzansi's Hip Hop Industry</h3>
+                <h3><b>number one Soweto boy</b> his work influenced Mzansi's Hip Hop Industry</h3>
             </div>
         <div id="img-div">
             <figure>
@@ -20,7 +20,7 @@
                     <img id="image" src="https://turntable.kagiso.io/images/WhatsApp_Image_2018-08-09_at_14.28.40.width-800.jpg" alt="picture of ProKid" width="500" height="500">
                 </div>
             <figcaption id="img-caption"> 
-                <strong>Linda Mkhize</strong> better known by his stage name 
+ <strong>Linda Mkhize</strong> better known by his stage name 
                 ProKid or PRO, was a South African rapper and producer. He was known for rapping in a 
                 mixture of South African township vernacular mostly tsotsi taal and English his music 
                 spoke on township realities Kasi lifestyle.
