--- a/myTributePage.html
+++ b/myTributePage.html
@@ -1,26 +1,26 @@
-<html lang="en-ZA">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
-    <title>My Tribute Page</title>
+    <title>Document</title>
 </head>
 <body>
     <main id="main">
         <div id="title-div">
-            <h1 id="title">Linda <a id="tribute-link" href="" target="_blank">"ProKid"</a> Mkhize</h1>
+            <h1 id="title">Linda <span id="pro">"ProKid"</span> Mkhize</h1>
         </div>
-            <div id="subtitle-div">
-                <h3><b>number one Soweto boy</b> his work influenced Mzansi's Hip Hop Industry</h3>
-            </div>
+        <div id="subtitle-div">
+            <h3><b>number one soweto boy</b> his work influenced mzansi's hip hop industry</h3>
+        </div>
         <div id="img-div">
             <figure>
                 <div id="disc">
                     <img id="image" src="https://turntable.kagiso.io/images/WhatsApp_Image_2018-08-09_at_14.28.40.width-800.jpg" alt="picture of ProKid" width="500" height="500">
                 </div>
             <figcaption id="img-caption"> 
- <strong>Linda Mkhize</strong> better known by his stage name 
+            <strong>Linda Mkhize</strong> better known by his stage name 
                 ProKid or PRO, was a South African rapper and producer. He was known for rapping in a 
                 mixture of South African township vernacular mostly tsotsi taal and English his music 
                 spoke on township realities Kasi lifestyle.
@@ -39,5 +39,4 @@
         </div>
     </main>
 </body>
-<script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
 </html>
