--- a/myTributePage.html
+++ b/myTributePage.html
@@ -1,34 +1,37 @@
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
-    <title>Document</title>
+    <title>tribute-page</title>
 </head>
+
 <body>
     <main id="main">
         <div id="title-div">
             <h1 id="title">Linda <span id="pro">"ProKid"</span> Mkhize</h1>
         </div>
         <div id="subtitle-div">
-            <h3><b>number one soweto boy</b> his work influenced mzansi's hip hop industry</h3>
+            <h3><b>number one soweto boy,</b> his work influenced mzansi's hip hop industry</h3>
         </div>
         <div id="img-div">
             <figure>
                 <div id="disc">
-                    <img id="image" src="https://turntable.kagiso.io/images/WhatsApp_Image_2018-08-09_at_14.28.40.width-800.jpg" alt="picture of ProKid" width="500" height="500">
+                    <img id="image"
+                        src="https://turntable.kagiso.io/images/WhatsApp_Image_2018-08-09_at_14.28.40.width-800.jpg"
+                        alt="picture of ProKid" width="500" height="500">
                 </div>
-            <figcaption id="img-caption"> 
-            <strong>Linda Mkhize</strong> better known by his stage name 
-                ProKid or PRO, was a South African rapper and producer. He was known for rapping in a 
-                mixture of South African township vernacular mostly tsotsi taal and English his music 
-                spoke on township realities Kasi lifestyle.
-            </figcaption>
-        </figure>
+                <figcaption id="img-caption">
+                    <strong>Linda Mkhize</strong> was a South African rapper and producer. He was known for 
+                    rapping in a mixture of South African township vernacular mostly tsotsi taal and English
+                    his music spoke on township realities Kasi lifestyle.
+                </figcaption>
+            </figure>
         </div>
         <div id="tribute-info">
-            <h3>Albums</h3>
+            <h3 title="Click Me"><a id="tribute-link" href="https://www.discogs.com/artist/942498-Pro-Kid" target="_blank">lbums</a></h3>
             <ul>
                 <li title="favorite tracks: fafa">2005 - Heads and Tales</li>
                 <li>2006 - DNA</li>
@@ -38,5 +41,6 @@
             </ul>
         </div>
     </main>
+    <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
 </body>
 </html>
