--- a/myTributePage.html
+++ b/myTributePage.html
@@ -31,7 +31,7 @@
             </figure>
         </div>
         <div id="tribute-info">
-            <h3 title="Click Me"><a id="tribute-link" href="https://www.discogs.com/artist/942498-Pro-Kid" target="_blank">lbums</a></h3>
+            <h3 title="Click Me"><a id="tribute-link" href="https://www.discogs.com/artist/942498-Pro-Kid" target="_blank">Albums</a></h3>
             <ul>
                 <li title="favorite tracks: fafa">2005 - Heads and Tales</li>
                 <li>2006 - DNA</li>
