--- a/myTributePage.html
+++ b/myTributePage.html
@@ -33,11 +33,11 @@
         <div id="tribute-info">
             <h3 title="Click Me"><a id="tribute-link" href="https://www.discogs.com/artist/942498-Pro-Kid" target="_blank">Albums</a></h3>
             <ul>
-                <li title="favorite tracks: fafa">2005 - Heads and Tales</li>
-                <li>2006 - DNA</li>
-                <li>2007 - Dankie San</li>
-                <li>2009 - Snakes and Ladders</li>
-                <li>2012 - Continua</li>
+                <li title="My favorite tracks: Ungaphel'Umoya Son, Ghetto Science, Wozobona">2005 - Heads and Tales</li>
+                <li title="My favorite tracks: none">2006 - DNA</li>
+                <li title="My favorite tracks: Bhampa, Uthini Ngo Pro">2007 - Dankie San</li>
+                <li title="My favorite tracks: Sekele">2009 - Snakes and Ladders</li>
+                <li title="My favorite tracks: none">2012 - Continua</li>
             </ul>
         </div>
     </main>
